Fix current day appointments overflow, prevent shrinking

--- a/src/app/home/dashboard/dashboard.module.scss
+++ b/src/app/home/dashboard/dashboard.module.scss
@@ -91,9 +91,21 @@
 .appointments {
   display: flex;
   align-items: center;
+  flex-shrink: 0;
+  height: fit-content;
+
+  padding-bottom: 10px;
+
+  max-width: 100%;
+  overflow-x: auto;
 }
-.appointment_wrapper:not(:first-of-type) {
-  margin-left: 10px;
+.appointment_wrapper {
+  flex-shrink: 0;
+  flex-grow: 0;
+
+  &:not(:first-of-type) {
+    margin-left: 10px;
+  }
 }
 .appointment {
   display: flex;
